Version 0.1
===========

19.12.2009
==========

  Peco Danajlovski <vortexmk@gmail.com>
  * Added this CHANGELOG file
  * Introducing Compass with Compass-960 plugin for 960gs CSS library
  * Default layout with HAML / SASS (using Compass)
  * Introducing basic design and logo