@@ -2,4 +2,7 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  navigation:
+    home: "Home"
+    users: "Users"
+    lists: "Lists"
